--- a/c/ca/can/canucks.com.html
+++ b/c/ca/can/canucks.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the canucks.com privacy policy that was archived on 2004-06-03.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040603021200id_/http%3A//www.canucks.com/subpage.asp%3FsectionID%3D181) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the canucks.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204202505id_/http%3A//www.canucks.com/subpage.asp%3FsectionID%3D181) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head>
 	<title>Canucks.com&nbsp;-&nbsp;&nbsp;Privacy Policy</title>
@@ -307,13 +307,13 @@ var submenu=new Array()
 //Set submenu contents. Expand as needed. For each content, make sure everything exists on ONE LINE. Otherwise, there will be JS errors.
 
 submenu[0]='<a href="/subpage.asp?sectionID=10" class="subnav" >Single Game</a> : <a href="/subpage.asp?sectionID=16" class="subnav" >Suites</a> : <a href="/subpage.asp?sectionID=11" class="subnav" >Season Tickets</a> : <a href="/subpage.asp?sectionID=12" class="subnav" >Ice Paks</a> : <a href="/subpage.asp?sectionID=13" class="subnav" >Group Tickets </a> : <a href="/subpage.asp?sectionID=17" class="subnav" >Customer Service</a> : <a href="/subpage.asp?sectionID=15" class="subnav" >Promotions</a>';
-submenu[1]='<a href="/schedule/schedule.asp?sectionID=18" class="subnav" >2003/2004 Game Schedule</a> : <a href="/schedule/broadcast.asp?sectionID=19" class="subnav" >Broadcast Listings</a> : <a href="/subpage.asp?sectionID=20" class="subnav" >Pay-Per-View</a> : <a href="/subpage.asp?sectionID=21" class="subnav" >Alumni Games</a>';
+submenu[1]='<a href="/schedule/schedule.asp?sectionID=18" class="subnav" >2004/2005 Game Schedule</a> : <a href="/schedule/broadcast.asp?sectionID=19" class="subnav" >Broadcast Listings</a> : <a href="/subpage.asp?sectionID=20" class="subnav" >Pay-Per-View</a> : <a href="/subpage.asp?sectionID=21" class="subnav" >Alumni Games</a>';
 submenu[2]='<a href="/subpage.asp?sectionID=22" class="subnav" >Game Notes</a> : <a href="/subpage.asp?sectionID=379" class="subnav" >All-Time Stats</a>';
 submenu[3]='<a href="/theteam/roster.asp?sectionID=23" class="subnav" >Roster</a> : <a href="/subpage.asp?sectionID=24" class="subnav" >Coaches & Staff</a> : <a href="/theteam/inthesystem.asp?sectionID=25" class="subnav" >In the System</a> : <a href="/subpage.asp?sectionID=27" class="subnav" >Hall of Fame</a> : <a href="/subpage.asp?sectionID=437" class="subnav" >Team Picture</a>';
 submenu[4]='<a href="/theinsider/archive.asp?sectionID=28" class="subnav" >Archives</a>';
-submenu[5]='<a href="/subpage.asp?sectionID=29" class="subnav" >Features</a> : <a href="/news/recaps.asp?sectionID=30" class="subnav" >Game Recaps</a> : <a href="/news/pressreleases.asp?sectionID=31" class="subnav" >Press Releases</a> : <a href="/news/nhlnews.asp?sectionID=33" class="subnav" >NHL News</a> : <a href="/subpage.asp?sectionID=34" class="subnav" >Hockey Links</a> : <a href="https://www.canucks-secure.com/insider/insideedge.csp" class="subnav" >Inside Edge</a>';
+submenu[5]='<a href="/subpage.asp?sectionID=29" class="subnav" >Features</a> : <a href="/news/recaps.asp?sectionID=30" class="subnav" >Game Recaps</a> : <a href="/news/pressreleases.asp?sectionID=31" class="subnav" >Press Releases</a> : <a href="/news/nhlnews.asp?sectionID=33" class="subnav" >NHL News</a> : <a href="/subpage.asp?sectionID=34" class="subnav" >Hockey Links</a> : <a href="http://www.canucks-secure.com/insider/gotoInsideEdge.jsp?ptid=101860" class="subnav" >Inside Edge</a>';
 submenu[6]='<a href="http://forum.canucks.com" class="subnav" target="_blank">Message Board</a> : <a href="/subpage.asp?sectionID=36" class="subnav" >Chat</a> : <a href="/cforce/default.asp?sectionID=37" class="subnav" target="_blank">C-Force Fan Club</a> : <a href="http://webmail.canucks.com/login.cgi" class="subnav" target="_blank">Canucks Mail</a> : <a href="/subpage.asp?sectionID=329" class="subnav" >Game Presentation</a> : <a href="/subpage.asp?sectionID=40" class="subnav" >Links</a> : <a href="/subpage.asp?sectionID=309" class="subnav" >Gallery</a> : <a href="/forum/fanpoll.asp?sectionID=290" class="subnav" >Poll</a>';
-submenu[7]='<a href="/subpage.asp?sectionID=42" class="subnav" >Appearances</a> : <a href="/subpage.asp?sectionID=43" class="subnav" >Donations</a> : <a href="/subpage.asp?sectionID=41" class="subnav" >Fundraising Events</a> : <a href="/subpage.asp?sectionID=44" class="subnav" >Canucks for Kids Fund</a> : <a href="/subpage.asp?sectionID=45" class="subnav" >Minor Hockey</a> : <a href="/subpage.asp?sectionID=46" class="subnav" >Education</a>';
+submenu[7]='<a href="/subpage.asp?sectionID=42" class="subnav" >In The Community</a> : <a href="/subpage.asp?sectionID=43" class="subnav" >Donations</a> : <a href="/subpage.asp?sectionID=44" class="subnav" >Canucks for Kids Fund</a> : <a href="/subpage.asp?sectionID=45" class="subnav" >Minor Hockey</a> : <a href="/subpage.asp?sectionID=46" class="subnav" >Education</a> : <a href="/subpage.asp?sectionID=457" class="subnav" >FAQ</a>';
 submenu[8]='<a href="/subpage.asp?sectionID=292" class="subnav" >Authentix</a> : <a href="/subpage.asp?sectionID=291" class="subnav" >Mail Order</a> : <a href="/subpage.asp?sectionID=356" class="subnav" >Scratch &amp; Win</a>';
 
 
@@ -485,7 +485,7 @@ var pauseit=1
 //Specify the marquee's content (don't delete <nobr> tag)
 //Keep all content on ONE line, and backslash any single quotations (ie: that\'s great):
 
-var marqueecontent='<nobr>10 Canucks Make World Cup Rosters.... Chubarov Added To Team Russia.... Malik Wins NHL Regular Season +/- Award </nobr>';
+var marqueecontent='<nobr>Canucks Announce Public Skate Dates..... General Motors Place Hosts Minor Hockey Teams For Practices.... Coaching Day Set For This Saturday </nobr>';
 //var marqueecontent='<nobr>Canucks vs Oilers - Saturday December 14th, 7:00 PM. <a href="">Game Details</a>... &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Last Game: Canucks (3) - Avalanche (1) <a href="">Game Recap</a>...</nobr>'
 
 
@@ -551,7 +551,7 @@ write('</ilayer>')
 document.write('<img src="/images/p.gif"></td></tr></table>')
 }
 }
-</script><span id="temp" style="visibility:hidden;position:absolute;top:-100;left:-1000"><nobr>10 Canucks Make World Cup Rosters.... Chubarov Added To Team Russia.... Malik Wins NHL Regular Season +/- Award </nobr></span><table border="0" cellspacing="0" cellpadding="0"><tbody><tr><td height="27" valign="top" style="height:27px;" background="/images/hp/ticker_on.gif"><div style="position:relative;top:6;width:378;height:15;overflow:hidden;background-color:#ffffff;"><div style="position:absolute;width:378;height:15;" onmouseover="copyspeed=pausespeed" onmouseout="copyspeed=marqueespeed"><div id="iemarquee" style="position:absolute;left:0;top:0"></div></div></div><img src="/images/p.gif"></td></tr></tbody></table>
+</script><span id="temp" style="visibility:hidden;position:absolute;top:-100;left:-1000"><nobr>Canucks Announce Public Skate Dates..... General Motors Place Hosts Minor Hockey Teams For Practices.... Coaching Day Set For This Saturday </nobr></span><table border="0" cellspacing="0" cellpadding="0"><tbody><tr><td height="27" valign="top" style="height:27px;" background="/images/hp/ticker_on.gif"><div style="position:relative;top:6;width:378;height:15;overflow:hidden;background-color:#ffffff;"><div style="position:absolute;width:378;height:15;" onmouseover="copyspeed=pausespeed" onmouseout="copyspeed=marqueespeed"><div id="iemarquee" style="position:absolute;left:0;top:0"></div></div></div><img src="/images/p.gif"></td></tr></tbody></table>
 
   </div></td>
   <td nowrap="" valign="top" height="27" background="/images/grey_bg_pattern.gif" width="58"><div id="tickerOpen"><img src="/images/p.gif" width="18" height="1" alt="" border="0"><a href="javascript:turnTickerOn();"><img src="/images/hp/ticker_open.gif" width="40" height="27" alt="Open Canucks News Ticker" border="0"></a></div><div id="tickerClose"><img src="/images/hp/ticker_onright.gif" width="18" height="27" alt="" border="0"><a href="javascript:turnTickerOff();"><img src="/images/hp/ticker_close.gif" width="40" height="27" alt="Close Canucks News Ticker" border="0"></a></div></td>
@@ -761,10 +761,10 @@ document.write("<a href='http://ads.canucks.com/adclick.php?n=ac770b99' target='
 document.write("<div style='padding-top:3px;'>");
 document.write("<a href='http://ads.canucks.com/adclick.php?n=aacabfb6' target='_blank'><img src='http://ads.canucks.com/adview.php?what="+ keyword[rnd_no] +"_actvn&amp;n=aacabfb6' border='0' alt=''></a>");
 }
-</script><a href="http://ads.canucks.com/adclick.php?n=ac770b99" target="_blank"><img src="http://ads.canucks.com/adview.php?what=canucks_btn&amp;n=ac770b99" border="0" alt=""></a><div style="padding-top:3px;"><a href="http://ads.canucks.com/adclick.php?n=aacabfb6" target="_blank"><img src="http://ads.canucks.com/adview.php?what=canucks_actvn&amp;n=aacabfb6" border="0" alt=""></a>
+</script><a href="http://ads.canucks.com/adclick.php?n=ac770b99" target="_blank"><img src="http://ads.canucks.com/adview.php?what=superpages_btn&amp;n=ac770b99" border="0" alt=""></a><div style="padding-top:3px;"><a href="http://ads.canucks.com/adclick.php?n=aacabfb6" target="_blank"><img src="http://ads.canucks.com/adview.php?what=superpages_actvn&amp;n=aacabfb6" border="0" alt=""></a>
 </div><!-- Start Div for Schedule -->        
 <div align="center" class="rightcolumnbox">
-<div align="left" style="margin-left:3px;"><img src="/images/dates/dark/6.gif" height="34"><img src="/images/dates/dark/2004.gif" width="31" height="34"></div>
+<div align="left" style="margin-left:3px;"><img src="/images/dates/dark/12.gif" height="34"><img src="/images/dates/dark/2004.gif" width="31" height="34"></div>
 <table cellpadding="0" cellspacing="0" border="0">
 <tbody><tr>
 <td bgcolor="#ffffff">
@@ -781,46 +781,46 @@ document.write("<a href='http://ads.canucks.com/adclick.php?n=aacabfb6' target='
 <tr bgcolor="#9D9C9C">
 <td class="cal">&nbsp;</td>
 <td class="cal">&nbsp;</td>
+<td class="cal">&nbsp;</td>
 <td class="cal">1</td>
-<td class="cal">2</td>
+<td class="cal" bgcolor="#9D1129" onclick="mClk(this)" onmouseover="this.bgColor='#9D1129';mOvr(this,'#9D1129');"><a href="javascript:openGameDetail(453);" class="date">2</a></td>
 <td class="cal">3</td>
-<td class="cal">4</td>
-<td class="cal">5</td>
+<td class="cal" bgcolor="#9D1129" onclick="mClk(this)" onmouseover="this.bgColor='#9D1129';mOvr(this,'#9D1129');"><a href="javascript:openGameDetail(454);" class="date">4</a></td>
 </tr>
 <tr bgcolor="#9D9C9C">
-<td class="cal">6</td>
+<td class="cal">5</td>
+<td class="cal" bgcolor="#9D1129" onclick="mClk(this)" onmouseover="this.bgColor='#9D1129';mOvr(this,'#9D1129');"><a href="javascript:openGameDetail(455);" class="date">6</a></td>
 <td class="cal">7</td>
 <td class="cal">8</td>
-<td class="cal">9</td>
-<td class="cal">10</td>
+<td class="cal" bgcolor="#11499C" onclick="mClk(this)" onmouseover="this.bgColor='#11499C';mOvr(this,'#11499C');"><a href="javascript:openGameDetail(456);" class="date">9</a></td>
+<td class="cal" bgcolor="#9D1129" onclick="mClk(this)" onmouseover="this.bgColor='#9D1129';mOvr(this,'#9D1129');"><a href="javascript:openGameDetail(457);" class="date">10</a></td>
 <td class="cal">11</td>
-<td class="cal">12</td>
 </tr>
 <tr bgcolor="#9D9C9C">
+<td class="cal" bgcolor="#11499C" onclick="mClk(this)" onmouseover="this.bgColor='#11499C';mOvr(this,'#11499C');"><a href="javascript:openGameDetail(458);" class="date">12</a></td>
 <td class="cal">13</td>
-<td class="cal">14</td>
+<td class="cal" bgcolor="#11499C" onclick="mClk(this)" onmouseover="this.bgColor='#11499C';mOvr(this,'#11499C');"><a href="javascript:openGameDetail(459);" class="date">14</a></td>
 <td class="cal">15</td>
-<td class="cal">16</td>
+<td class="cal" bgcolor="#11499C" onclick="mClk(this)" onmouseover="this.bgColor='#11499C';mOvr(this,'#11499C');"><a href="javascript:openGameDetail(460);" class="date">16</a></td>
 <td class="cal">17</td>
-<td class="cal">18</td>
-<td class="cal">19</td>
+<td class="cal" bgcolor="#9D1129" onclick="mClk(this)" onmouseover="this.bgColor='#9D1129';mOvr(this,'#9D1129');"><a href="javascript:openGameDetail(461);" class="date">18</a></td>
 </tr>
 <tr bgcolor="#9D9C9C">
+<td class="cal">19</td>
 <td class="cal">20</td>
-<td class="cal">21</td>
+<td class="cal" bgcolor="#9D1129" onclick="mClk(this)" onmouseover="this.bgColor='#9D1129';mOvr(this,'#9D1129');"><a href="javascript:openGameDetail(462);" class="date">21</a></td>
 <td class="cal">22</td>
-<td class="cal">23</td>
+<td class="cal" bgcolor="#9D1129" onclick="mClk(this)" onmouseover="this.bgColor='#9D1129';mOvr(this,'#9D1129');"><a href="javascript:openGameDetail(463);" class="date">23</a></td>
 <td class="cal">24</td>
 <td class="cal">25</td>
-<td class="cal">26</td>
 </tr>
 <tr bgcolor="#9D9C9C">
-<td class="cal">27</td>
+<td class="cal" bgcolor="#11499C" onclick="mClk(this)" onmouseover="this.bgColor='#11499C';mOvr(this,'#11499C');"><a href="javascript:openGameDetail(464);" class="date">26</a></td>
+<td class="cal" bgcolor="#9D1129" onclick="mClk(this)" onmouseover="this.bgColor='#9D1129';mOvr(this,'#9D1129');"><a href="javascript:openGameDetail(465);" class="date">27</a></td>
 <td class="cal">28</td>
-<td class="cal">29</td>
+<td class="cal" bgcolor="#9D1129" onclick="mClk(this)" onmouseover="this.bgColor='#9D1129';mOvr(this,'#9D1129');"><a href="javascript:openGameDetail(466);" class="date">29</a></td>
 <td class="cal">30</td>
-<td class="cal">&nbsp;</td>
-<td class="cal">&nbsp;</td>
+<td class="cal" bgcolor="#11499C" onclick="mClk(this)" onmouseover="this.bgColor='#11499C';mOvr(this,'#11499C');"><a href="javascript:openGameDetail(467);" class="date">31</a></td>
 <td class="cal">&nbsp;</td>
 </tr>
 <tr bgcolor="#9D9C9C">
@@ -833,7 +833,7 @@ document.write("<a href='http://ads.canucks.com/adclick.php?n=aacabfb6' target='
 </tr>
 </tbody></table>
 
-<div align="left">&nbsp;&nbsp;<a href="/subpage.asp?sectionID=181&amp;month=4&amp;year=2004#calendar"><img src="/images/buttons/cal_prev.gif" width="18" height="18" alt="previous month" border="0"></a><a href="/subpage.asp?sectionID=181&amp;month=6&amp;year=2004#calendar"><img src="/images/buttons/cal_next.gif" width="18" height="18" alt="next month" border="0"></a>&nbsp;&nbsp;</div>
+<div align="left">&nbsp;&nbsp;<a href="/subpage.asp?sectionID=181&amp;month=10&amp;year=2004#calendar"><img src="/images/buttons/cal_prev.gif" width="18" height="18" alt="previous month" border="0"></a><a href="/subpage.asp?sectionID=181&amp;month=0&amp;year=2005#calendar"><img src="/images/buttons/cal_next.gif" width="18" height="18" alt="next month" border="0"></a>&nbsp;&nbsp;</div>
 
 <div align="left">&nbsp;<a target="new" href="http://www.ticketmaster.ca/cgi/aff/canucks/artist_ca.idc?searchname=VANCOUVER_CANUCKS&amp;state=bc&amp;city=&amp;type=STATE&amp;minorcatnum=69&amp;MajorCatNum=6"><img src="/images/buttons/buy_tickets.gif" width="23" height="23" alt="buy tickets" border="0" align="absmiddle"></a> 
 <a target="new" href="http://www.ticketmaster.ca/cgi/aff/canucks/artist_ca.idc?searchname=VANCOUVER_CANUCKS&amp;state=bc&amp;city=&amp;type=STATE&amp;minorcatnum=69&amp;MajorCatNum=6">Buy your tickets</a></div>
@@ -844,7 +844,7 @@ document.write("<a href='http://ads.canucks.com/adclick.php?n=aacabfb6' target='
 <!-- End Div for Video Player --><!-- Start Div for Daily Poll -->
 <div class="rightcolumnbox"><img src="/images/titles/daily_poll.gif" width="137" height="35" alt="Canucks Poll" border="0">
 <div style="padding-left:6px;padding-bottom:12px;">
-<script language="javascript" src="http://www.canucks.com/UltimatePollASP/getPollJava.asp?pollID=201&amp;daily=1"></script>
+<script language="javascript" src="http://www.canucks.com/UltimatePollASP/getPollJava.asp?pollID=222&amp;daily=1"></script>
 </div>
 </div>
 <!-- End Div for Daily Poll -->
