--- a/b/bo/bol/bollyvista.com.html
+++ b/b/bo/bol/bollyvista.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the bollyvista.com privacy policy that was archived on 2004-06-04.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040604205152id_/http%3A//www.bollyvista.com/aboutus/privacy.php) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the bollyvista.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204222701id_/http%3A//www.bollyvista.com/aboutus/privacy.php) for the most accurate reproduction.-->
 
 <html><head>
 <title>Bollyvista.com : Privacy Statement</title>
@@ -14,7 +14,7 @@
 <table border="0" cellpadding="0" cellspacing="0">
 <tbody><tr><td align="center" class="logobg"> 
 <span class="date">
-Friday, June 04 2004</span> 
+Saturday, December 04 2004</span> 
 </td></tr>
 <tr><td class="logobg">
 <a href="http://www.bollyvista.com/" target="_top"><img src="http://www.bollyvista.com/images/newlogo.gif" alt="Bollyvista.com logo" border="0" height="46" width="196"></a>
@@ -36,7 +36,7 @@ Friday, June 04 2004</span>
       document.write ("&amp;referer=" + escape(document.referer));
    document.write ("'><" + "/script>");
 //-->
-</script><script language="JavaScript" type="text/javascript" src="http://www.bollyvista.com/admin/adserver/adjs.php?n=003800156&amp;what=zone:25&amp;exclude=,"></script><noscript><a href='http://www.bollyvista.com/admin/adserver/adclick.php?n=a8b0de43' target='_blank'><img src='http://www.bollyvista.com/admin/adserver/adview.php?what=zone:25&amp;n=a8b0de43' border='0' alt=''></a></noscript>
+</script><script language="JavaScript" type="text/javascript" src="http://www.bollyvista.com/admin/adserver/adjs.php?n=435739973&amp;what=zone:25&amp;exclude=,"></script><noscript><a href='http://www.bollyvista.com/admin/adserver/adclick.php?n=a8b0de43' target='_blank'><img src='http://www.bollyvista.com/admin/adserver/adview.php?what=zone:25&amp;n=a8b0de43' border='0' alt=''></a></noscript>
 </td>
 <td width="2" class="shadow"><img src="http://www.bollyvista.com/images/spacer.gif" height="1" width="2"></td>
 </tr>
@@ -46,8 +46,8 @@ Friday, June 04 2004</span>
 <table width="760" border="0" cellpadding="0" cellspacing="0">
 <tbody><tr class="welcomebar">
 <td height="22" width="10"><img src="/images/spacer.gif" height="22" width="10"></td>
-<td width="618" valign="middle"><b><a href="/register/?PHPSESSID=0dc3ec2c6cd8c5fe8f372ea1e3b4723e">Welcome to bollyvista.com</a></b></td>
-<td align="right" valign="middle" width="120"><b><a href="/register/?PHPSESSID=0dc3ec2c6cd8c5fe8f372ea1e3b4723e">Log In</a></b></td>
+<td width="618" valign="middle"><b><a href="/register/?PHPSESSID=9bebab8bec203d216aa57e5186f88d76">Welcome to bollyvista.com</a></b></td>
+<td align="right" valign="middle" width="120"><b><a href="/register/?PHPSESSID=9bebab8bec203d216aa57e5186f88d76">Log In</a></b></td>
 <td width="10"><img src="/images/spacer.gif" height="1" width="10"></td>
 <td width="2" class="shadow"><img src="/images/spacer.gif" height="1" width="2"></td>
 </tr>
@@ -62,8 +62,8 @@ document.write('<IFRAME WIDTH=0 HEIGHT=0 MARGINWIDTH=0 MARGINHEIGHT=0 HSPACE=0 V
 document.write('<SCR' + 'IPT LANGUAGE="JavaScript1.1" SRC="http://ads.mediaturf.net/js.ng/Params.richmedia=yes&site=bollyvista&size=300x300&content=homepage&SpaceDesc=popunder&campaign=desicupid_1013&bust='+bust+'">\n');
 document.write('</SCR' + 'IPT>\n');
 document.write('</IFRAME>');
-</script><iframe width="0" height="0" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" bordercolor="#000000" src="http://ads.mediaturf.net/html.ng/site=bollyvista&amp;size=300x300&amp;content=homepage&amp;SpaceDesc=popunder&amp;campaign=desicupid_1013&amp;bust=876558">
-<SCRIPT LANGUAGE="JavaScript1.1" SRC="http://ads.mediaturf.net/js.ng/Params.richmedia=yes&site=bollyvista&size=300x300&content=homepage&SpaceDesc=popunder&campaign=desicupid_1013&bust=876558">
+</script><iframe width="0" height="0" marginwidth="0" marginheight="0" hspace="0" vspace="0" frameborder="0" scrolling="no" bordercolor="#000000" src="http://ads.mediaturf.net/html.ng/site=bollyvista&amp;size=300x300&amp;content=homepage&amp;SpaceDesc=popunder&amp;campaign=desicupid_1013&amp;bust=362857">
+<SCRIPT LANGUAGE="JavaScript1.1" SRC="http://ads.mediaturf.net/js.ng/Params.richmedia=yes&site=bollyvista&size=300x300&content=homepage&SpaceDesc=popunder&campaign=desicupid_1013&bust=362857">
 </SCRIPT>
 </iframe>
 
@@ -75,20 +75,69 @@ function top10(){
 var URL = "http://www.bollyvista.com/realaudio/play_bollyvista_recco.php?xor=view&asset=view&page=index";
 window.open(URL,"Add","toolbar=no,location=no,directories=no,status=no,menubar=no,scrollbars=yes,resizable=no,width=470,height=600")
 }
+//*********This part is for search box ******
+var keywords= new Array();
+keywords[0] = "music";
+keywords[1] = "movies";
+keywords[2] = "mp3s";
+keywords[3] = "downloads";
+keywords[4] = "screensavers";
+keywords[5] = "wallpapers";
+keywords[6] = "DVDs";
+keywords[7] = "CDs";
+keywords[8] = "movie tickets";
+keywords[9] = "online shopping";
+function random_words()
+{
+	var randnum = Math.round( Math.random()*10); 
+	var keyword = keywords[randnum];
+	if(keyword == "" || keyword == null)
+	{
+		keyword = "music";
+	}
+	searchform.kword.value = keyword;
+	searchform.q.value = keyword;
+	
+}
+
+// make function to to respond radiobutton click event
+var clicked="";
+function change_form_info(clicked)
+{
+	if(clicked=='b')
+	{
+		searchform.method="POST";
+		searchform.action="/webdir/search.php";
+		//searh bollyvista
+	}else
+	{
+		searchform.method="GET";
+		searchform.q.value=searchform.kword.value;
+		searchform.action="http://search.findtarget.com/bollyvista/search.php";
+		//search internet
+	}
+}
+//****************************************************************
 // -->
 </script>
 <table width="144" cellpadding="0" cellspacing="0" border="0">
-<form action="/webdir/search.php" method="post" name="searchform"></form><input type="hidden" name="PHPSESSID" value="0dc3ec2c6cd8c5fe8f372ea1e3b4723e"><tbody><tr bgcolor="#c2c2c2">
+<tbody><tr class="menuheading"><td width="100%" height="13" align="left" valign="middle">
+<img src="/images/clear.gif" width="5" height="1">SEARCH<br>
+<img src="/images/wt_line.gif" width="144" height="1"></td></tr>
+<form action="http://search.findtarget.com/bollyvista/search.php" method="GET" name="searchform"></form><input type="hidden" name="PHPSESSID" value="9bebab8bec203d216aa57e5186f88d76">
+<tr bgcolor="#c2c2c2">
 <td width="100%" height="35" align="left" valign="bottom">
 <table width="100%" cellpadding="0" cellspacing="0" border="0">
 <tbody><tr>
-<td width="80%" align="center" valign="top"><font face="verdana, arial, helvetica" size="1" color="#000000"><b><a href="/webdir/?PHPSESSID=0dc3ec2c6cd8c5fe8f372ea1e3b4723e" class="guide">Bollywood Guide</a></b></font><br>
-&nbsp;&nbsp;<input type="hidden" name="search_sid" value="0"><input type="text" name="kword" size="10" value="search"></td>
-<td width="20%" align="left" valign="bottom"><img src="/images/clear.gif" height="13" width="1"><br>
-<input type="image" src="/images/go_search.gif?PHPSESSID=0dc3ec2c6cd8c5fe8f372ea1e3b4723e" border="0"></td>
-</tr>
-</tbody></table><img src="/images/wt_line.gif" width="144" height="1"></td>
-</tr>
+<td width="100%" valign="middle" colspan="2">
+<font face="verdana, arial, helvetica" size="1" color="#000000">
+&nbsp;<input type="radio" name="search" onclick="javascript:change_form_info('b')" value="b">&nbsp;<b><a href="/webdir/?PHPSESSID=9bebab8bec203d216aa57e5186f88d76" class="guide">Bollywood Guide</a></b><br>
+&nbsp;<input type="radio" checked="" name="search" onclick="javascript:change_form_info('i')" value="">&nbsp;<a href="http://search.findtarget.com/bollyvista/search.php?"><b>Internet</b></a></font><br></td></tr>
+<tr><td width="80%" align="center" valign="top"><input type="hidden" name="search_sid" value="0"><input type="text" name="kword" onfocus="value=''" size="13" value="search"><input type="hidden" name="q"></td>
+<td width="20%" align="left" valign="top"><input type="image" src="/images/go_search.gif?PHPSESSID=9bebab8bec203d216aa57e5186f88d76" border="0"><br></td></tr>
+</tbody></table>
+<img src="/images/clear.gif" width="1" height="5" <img=""><br>
+</td></tr>
 <tr class="menuheading"><td width="100%" height="13" align="left" valign="middle">
 <img src="/images/clear.gif" width="5" height="1">Movies Zone<br>
 <img src="/images/wt_line.gif" width="144" height="1"></td></tr>
@@ -206,9 +255,9 @@ window.open(URL,"Add","toolbar=no,location=no,directories=no,status=no,menubar=n
 <tr class="sidebar"><td width="100%" height="13" align="left" valign="middle">
 <img src="/images/clear.gif" width="9" height="1"><a href="http://mobile.bollyvista.com" class="linkmb">Ringtones</a><br>
 <img src="/images/wt_line.gif" width="144" height="1"><br>
-<img src="/images/clear.gif" width="9" height="1"><a href="http://www.erosentertainment.com" class="linkmb">DVDs</a><br>
-<img src="/images/wt_line.gif" width="144" height="1"><br>
 <img src="/images/clear.gif" width="9" height="1"><a href="http://www.cafeshops.com/bollyvista" class="linkmb">Merchandise</a><br>
+<img src="/images/wt_line.gif" width="144" height="1"><br>
+<img src="/images/clear.gif" width="9" height="1"><a href="http://www.bollyvista.com/cricket/" class="linkmb">Cricket</a><br>
 <img src="/images/wt_line.gif" width="144" height="1"><br>
 </td></tr>
 <tr class="menuheading"><td width="100%" height="13" align="left" valign="middle">
@@ -251,7 +300,7 @@ window.open(URL,"Add","toolbar=no,location=no,directories=no,status=no,menubar=n
 </td>
 <td valign="top" width="478" class="content">
 <table border="0" cellpadding="0" cellspacing="0" width="100%"><tbody><tr><td height="29" valign="middle" class="contenttop">
-<a href="/?PHPSESSID=0dc3ec2c6cd8c5fe8f372ea1e3b4723e">Home</a> &gt;&gt; Privacy Statement
+<a href="/?PHPSESSID=9bebab8bec203d216aa57e5186f88d76">Home</a> &gt;&gt; Privacy Statement
 </td></tr></tbody></table>
 <br>
 <b>BOLLYVISTA.COM</b> is strongly committed to honoring the privacy of our visitors.
@@ -362,7 +411,7 @@ Advertisement
       document.write ("&amp;referer=" + escape(document.referer));
    document.write ("'><" + "/script>");
 //-->
-</script><script language="JavaScript" type="text/javascript" src="http://www.bollyvista.com/admin/adserver/adjs.php?n=330751601&amp;what=zone:33&amp;exclude=,"></script><noscript><a href='http://www.bollyvista.com/admin/adserver/adclick.php?n=a3b02033' target='_blank'><img src='http://www.bollyvista.com/admin/adserver/adview.php?what=zone:33&amp;n=a3b02033' border='0' alt=''></a></noscript>
+</script><script language="JavaScript" type="text/javascript" src="http://www.bollyvista.com/admin/adserver/adjs.php?n=834666711&amp;what=zone:33&amp;exclude=,"></script><noscript><a href='http://www.bollyvista.com/admin/adserver/adclick.php?n=a3b02033' target='_blank'><img src='http://www.bollyvista.com/admin/adserver/adview.php?what=zone:33&amp;n=a3b02033' border='0' alt=''></a></noscript>
 <br>
 <img src="/images/spacer.gif" height="10" width="1"><br>
 <script language="JavaScript" type="text/javascript">
@@ -378,7 +427,7 @@ Advertisement
       document.write ("&amp;referer=" + escape(document.referer));
    document.write ("'><" + "/script>");
 //-->
-</script><script language="JavaScript" type="text/javascript" src="http://www.bollyvista.com/admin/adserver/adjs.php?n=457921267&amp;what=zone:27&amp;exclude=,"></script><noscript><a href='http://www.bollyvista.com/admin/adserver/adclick.php?n=acff350b' target='_blank'><img src='http://www.bollyvista.com/admin/adserver/adview.php?what=zone:27&amp;n=acff350b' border='0' alt=''></a></noscript>
+</script><script language="JavaScript" type="text/javascript" src="http://www.bollyvista.com/admin/adserver/adjs.php?n=623543519&amp;what=zone:27&amp;exclude=,"></script><noscript><a href='http://www.bollyvista.com/admin/adserver/adclick.php?n=acff350b' target='_blank'><img src='http://www.bollyvista.com/admin/adserver/adview.php?what=zone:27&amp;n=acff350b' border='0' alt=''></a></noscript>
 </td></tr>
 </tbody></table>
 <!-- End right nav. column table --></td>
@@ -396,7 +445,7 @@ Advertisement
 Copyright © 2004 Bollyvista.com
 </td></tr>
 </tbody></table>
-<form name="hotlist" method="post" action="http://www.bollyvista.com/common/addtohotlist.php"><input type="hidden" name="PHPSESSID" value="0dc3ec2c6cd8c5fe8f372ea1e3b4723e">
+<form name="hotlist" method="post" action="http://www.bollyvista.com/common/addtohotlist.php"><input type="hidden" name="PHPSESSID" value="9bebab8bec203d216aa57e5186f88d76">
   <input type="hidden" name="entryid" value="">
   <input type="hidden" name="entrycat" value="">
   <input type="hidden" name="entrytitle" value="">
