--- a/a/ac/act/activewin.com.html
+++ b/a/ac/act/activewin.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the activewin.com privacy policy that was archived on 2004-06-10.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20040610213556id_/http%3A//www.activewin.com/terms/privacy.shtml) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the activewin.com privacy policy that was archived on 2004-12-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20041204230425id_/http%3A//www.activewin.com/terms/privacy.shtml) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
@@ -31,8 +31,8 @@ i=u+x+'&sid='+id+'&m=1&f=b&v=1.4&c='+f+'&r='+escape(dc.referrer);
 u='<a  hr'+'ef="'+u+'/click.here?sid='+id+'&m=1&c='+f+'"  target="_blank">';
 dc.writeln('<ifr'+'ame src="'+i+'&d=f"'+t+'0 hspace=0 vspace=0 frameborder=0 scrolling=no>');
 if(navigator.appName.indexOf('Mic')<=0){dc.writeln(u+'<img src="'+i+'&d=n"'+z+'></a>');}
-dc.writeln('</iframe>'); // --></script><iframe src="http://media.fastclick.net/w/get.media?t=n&amp;sid=10814&amp;m=1&amp;f=b&amp;v=1.4&amp;c=1530&amp;r=&amp;d=f" width="468" height="60" border="0" marginheight="0" marginwidth="0" hspace="0" vspace="0" frameborder="0" scrolling="no">
-<a  href="http://media.fastclick.net/w/click.here?sid=10814&m=1&c=1530"  target="_blank"><img src="http://media.fastclick.net/w/get.media?t=n&sid=10814&m=1&f=b&v=1.4&c=1530&r=&d=n" width=468 height=60 border=0 ></a>
+dc.writeln('</iframe>'); // --></script><iframe src="http://media.fastclick.net/w/get.media?t=n&amp;sid=10814&amp;m=1&amp;f=b&amp;v=1.4&amp;c=6115&amp;r=&amp;d=f" width="468" height="60" border="0" marginheight="0" marginwidth="0" hspace="0" vspace="0" frameborder="0" scrolling="no">
+<a  href="http://media.fastclick.net/w/click.here?sid=10814&m=1&c=6115"  target="_blank"><img src="http://media.fastclick.net/w/get.media?t=n&sid=10814&m=1&f=b&v=1.4&c=6115&r=&d=n" width=468 height=60 border=0 ></a>
 </iframe>
 <noscript>
 <a href="http://media.fastclick.net/w/click.here?sid=10814&m=1&c=1"  target="_blank">
@@ -61,7 +61,7 @@ doc.write('<scr'+'ipt language="javascript" src="http://media.fastclick.net');
 doc.write('/w/pop.cgi?sid=10814&m=2&v=1.7e&u='+url+'&c='+bust+'"></scr'+'ipt>');
 date_ob.setTime(date_ob.getTime()+43200000);
 doc.cookie='he=llo; path=/; expires='+ date_ob.toGMTString();} // -->
-</script><script language="javascript" src="http://media.fastclick.net/w/pop.cgi?sid=10814&amp;m=2&amp;v=1.7e&amp;u=https%3A//web.archive.org/web/20040610213556id_/http%253A//www.activewin.com/terms/privacy.shtml&amp;c=7"></script>
+</script><script language="javascript" src="http://media.fastclick.net/w/pop.cgi?sid=10814&amp;m=2&amp;v=1.7e&amp;u=https%3A//web.archive.org/web/20041204230425id_/http%253A//www.activewin.com/terms/privacy.shtml&amp;c=7"></script>
 <!-- FASTCLICK.COM POP-UNDER CODE v1.7e for activewin.com -->
 </center></td>
   </tr>
@@ -246,7 +246,7 @@ doc.cookie='he=llo; path=/; expires='+ date_ob.toGMTString();} // -->
     </td>
   </tr>
   <tr>
-    <td onmouseout="rolloff(this);" onmouseover="rollon(this);" onclick="location.href='http://www.activexbox.com/xbox/'" class="nav">
+    <td onmouseout="rolloff(this);" onmouseover="rollon(this);" onclick="location.href='http://www.activexbox.com/xbox/default.asp'" class="nav">
     <p align="right"><font size="1" color="#000080">Xbox</font></p>
     </td>
   </tr>
@@ -280,7 +280,7 @@ doc.cookie='he=llo; path=/; expires='+ date_ob.toGMTString();} // -->
     </td>
   </tr>
   <tr>
-    <td onmouseout="rolloff(this);" onmouseover="rollon(this);" onclick="location.href='http://www.activexbox.com'" class="nav">
+    <td onmouseout="rolloff(this);" onmouseover="rollon(this);" onclick="location.href='http://www.activexbox.com/xbox/default.asp'" class="nav">
     <p align="right"><font size="1" color="#000080">Xbox News</font></p>
     </td>
   </tr>
@@ -657,8 +657,8 @@ doc.cookie='he=llo; path=/; expires='+ date_ob.toGMTString();} // -->
     </td>
   </tr>
   <tr>
-    <td onmouseout="rolloff(this);" onmouseover="rollon(this);" onclick="location.href='http://www.activewin.com/reviews/xbox/software/2003/amped_2/'" class="nav">
-    <p align="right"><font size="1" color="#000080">Amped 2</font></p>
+    <td onmouseout="rolloff(this);" onmouseover="rollon(this);" onclick="location.href='http://www.activewin.com/reviews/xbox/software/2004/mafia/index.shtml'" class="nav">
+    <p align="right"><font size="1" color="#000080">Mafia </font></p>
     </td>
   </tr>
   <tr>
@@ -699,13 +699,48 @@ doc.cookie='he=llo; path=/; expires='+ date_ob.toGMTString();} // -->
     </td>
   </tr>
   <tr>
+    <td onmouseout="rolloff(this);" onmouseover="rollon(this);" onclick="location.href='http://www.activewin.com/reviews/hardware/mice/notebook/logitech/'" class="nav">
+    <p align="right"><font size="1" color="#000080">Logitech's Cordless Optical 
+    Mouse for Notebooks </font></p>
+    </td>
+  </tr>
+  <tr>
     <td onmouseout="rolloff(this);" onmouseover="rollon(this);" onclick="location.href='http://www.activewin.com/reviews/mac/hardware/ipod/index.shtml'" class="nav">
     <p align="right"><font size="1" color="#000080">Apple iPod</font></p>
     </td>
   </tr>
   <tr>
-    <td onmouseout="rolloff(this);" onmouseover="rollon(this);" onclick="location.href='http://www.activewin.com/reviews/hardware/cameras/logitech/quickcam_pro_4000/index.shtml'" class="nav">
-    <p align="right"><font size="1" color="#000080">Logitech Quickcam Pro 4000</font></p>
+    <td bgcolor="#E4E4E4" class="nav">
+    <p align="right">
+    <img border="0" src="http://www.activewin.com/images/blank.gif" width="1" height="4"></p>
+    </td>
+  </tr>
+  <tr>
+    <td bgcolor="#C0C0C0" class="nav">
+    <p align="right">
+    <img border="0" src="http://www.activewin.com/images/blank.gif" width="1" height="4"></p>
+    </td>
+  </tr>
+  <tr>
+    <td bgcolor="#E4E4E4" class="nav">
+    <p align="right">
+    <img border="0" src="http://www.activewin.com/images/blank.gif" width="1" height="4"></p>
+    </td>
+  </tr>
+  <tr>
+    <td onmouseout="mainoff(this);" onmouseover="mainon(this);" onclick="location.href='http://www.activewin.com/reviews'" class="nav">
+    <p align="right"><b><font color="#800000" size="2">
+    <span style="font-variant: small-caps">Latest Interviews</span></font></b></p>
+    </td>
+  </tr>
+  <tr>
+    <td onmouseout="rolloff(this);" onmouseover="rollon(this);" onclick="location.href='http://www.activewin.com/interviews/microsoft/36.shtml'" class="nav">
+    <p align="right"><font size="1" color="#000080">Steve Ballmer</font></p>
+    </td>
+  </tr>
+  <tr>
+    <td onmouseout="rolloff(this);" onmouseover="rollon(this);" onclick="location.href='http://www.activewin.com/interviews/microsoft/34.shtml'" class="nav">
+    <p align="right"><font size="1" color="#000080">Todd Greenberg</font></p>
     </td>
   </tr>
   <tr>
@@ -826,11 +861,11 @@ doc.cookie='he=llo; path=/; expires='+ date_ob.toGMTString();} // -->
 <p align="center">
 <!-- FASTCLICK.COM 120x600 CODE v1.0c for activewin.com -->
 <iframe src="http://media.fastclick.net/w/get.media?sid=10814&amp;m=3&amp;d=f&amp;v=1.0c&amp;t=n&amp;pageid=1" width="120" height="600" hspace="0" vspace="0" frameborder="0" marginheight="0" marginwidth="0" scrolling="no">
-<a href="http://media.fastclick.net/w/click.here?sid=10814&m=3&pageid=1" target="_blank"><img width=120
-height=600 src="http://media.fastclick.net/w/get.media?sid=10814&m=3&d=s&v=1.0c&pageid=1" border=0></a>
+<a href="http://media.fastclick.net/w/click.here?sid=10814&m=3&pageid=1" target="_blank">
+<img width="120" height="600" src="http://media.fastclick.net/w/get.media?sid=10814&m=3&d=s&v=1.0c&pageid=1" border="0">
+</a>
 </iframe>
-<!-- FASTCLICK.COM 120x600 CODE v1.0c for activewin.com -->
-</p>
+<!-- FASTCLICK.COM 120x600 CODE v1.0c for activewin.com --></p>
 <p align="center">
 <script type="text/javascript"><!--
 google_ad_client = "pub-0767097020683841";
@@ -844,6 +879,7 @@ google_color_url = "008000";
 google_color_text = "000000";
 //--></script>
 <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+
 </script>
 </p>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
